--- a/Automation-App/src/app/components/grow-lights/grow-lights.component.html
+++ b/Automation-App/src/app/components/grow-lights/grow-lights.component.html
@@ -15,7 +15,7 @@
           <hr color="grey" />
           <h3 class="h3_sensor_title">Day and Night Times</h3>
           <ion-row> 
-            <ion-col size="12">
+            <ion-col class="no_padding" size="12">
               <ion-item>
                 <ion-label  class="sensor_black_label" position="floating">Lights On</ion-label>
                 <ion-datetime displayFormat="h:mm a" placeholder="Select Time" formControlName="lights_on"></ion-datetime>
@@ -23,7 +23,7 @@
             </ion-col>
           </ion-row>
           <ion-row> 
-            <ion-col size="12">
+            <ion-col class="no_padding" size="12">
               <ion-item>
                 <ion-label class="sensor_black_label" position="floating">Lights Off</ion-label>
                 <ion-datetime displayFormat="h:mm a" placeholder="Select Time" formControlName="lights_off"></ion-datetime>
