--- a/Automation-App/src/app/components/reservoir/reservoir.component.html
+++ b/Automation-App/src/app/components/reservoir/reservoir.component.html
@@ -18,7 +18,7 @@
           </ion-item>
         </ion-row>
         <ion-row>
-          <ion-col size="12">
+          <ion-col class="no_padding" size="12">
             <ion-item>
               <ion-label class="sensor_black_label" position="floating">Reservoir Size</ion-label>
               <ion-input formControlName="reservoir_size" type="number"></ion-input>
@@ -26,7 +26,7 @@
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-col size="12">
+          <ion-col class="no_padding" size="12">
             <ion-item>
               <ion-label class="sensor_black_label" position="floating">Replacement Interval</ion-label>
               <ion-input formControlName="water_replacement_interval" type="number"></ion-input>
