--- a/Automation-App/src/app/dashboard/control/control.page.html
+++ b/Automation-App/src/app/dashboard/control/control.page.html
@@ -27,12 +27,12 @@
     <div *ngIf="noDevices" class="center">
       <ion-grid>
         <ion-row>
-          <ion-col size="10" offset="1">
+          <ion-col  class="text_center" size="10" offset="1">
             <h6>You have no Hydrotek Devices</h6>
           </ion-col>
         </ion-row>
         <ion-row>
-          <ion-col size="10" offset="1">
+          <ion-col  class="text_center" size="10" offset="1">
             <h6>Click the Create Device Button in the side menu to create a Hydrotek Device</h6>
           </ion-col>
         </ion-row>
