--- a/Automation-App/src/app/add-growroom/add-growroom.page.html
+++ b/Automation-App/src/app/add-growroom/add-growroom.page.html
@@ -10,19 +10,19 @@
 <ion-content class="gradient_background">
   <div class="content" *ngIf="!isLoading">
     <form [formGroup]="growRoomForm" (ngSubmit)="onSubmit()">
-      <ion-grid>
+      <ion-grid class="no_padding_bottom">
         <ion-row>
-          <ion-col size="7">
+          <ion-col class="no_padding_bottom" size="7">
             <h2 class="general_settings">General Settings</h2>
           </ion-col>
-          <ion-col size="5" class="button_col">
+          <ion-col size="5" class="button_col no_padding_bottom">
             <ion-button class="add_button" type="submit">Create</ion-button>
           </ion-col>
         </ion-row>
       </ion-grid>
       <hr color="white">
       <ion-card>
-        <ion-card-content>
+        <ion-card-content class="no_padding_bottom">
           <ion-list>
             <ion-item>
               <ion-label class="sensor_black_label" position="floating">Grow Room Name</ion-label>
