--- a/Automation-App/src/app/components/general-settings/general-settings.component.html
+++ b/Automation-App/src/app/components/general-settings/general-settings.component.html
@@ -15,7 +15,7 @@
           <hr color="grey"/>
           <div class="group">
             <ion-row>
-              <ion-col size="12">
+              <ion-col class="no_padding" size="12">
                 <ion-item>
                   <ion-label class="sensor_black_label" position="floating">Device Name</ion-label>
                   <ion-input formControlName="device_name"></ion-input>
@@ -25,7 +25,7 @@
             
             <h3 class="h3_sensor_title">Reservoir Settings</h3>
             <ion-row>
-              <ion-col size="12">
+              <ion-col class="no_padding" size="12">
                 <ion-item>
                   <ion-label class="sensor_black_label" position="floating">Reservoir Size</ion-label>
                   <ion-input formControlName="reserv_size" type="number"></ion-input>
