--- a/Automation-App/src/app/components/irrigation/irrigation.component.html
+++ b/Automation-App/src/app/components/irrigation/irrigation.component.html
@@ -23,7 +23,7 @@
           </ion-list>
           <h3 class="h3_sensor_title">Irrigation Schedule</h3>
           <ion-row> 
-            <ion-col size="12">
+            <ion-col class="no_padding" size="12">
               <ion-item>
                 <ion-label class="sensor_black_label" position="floating">Irrigation On</ion-label>
                 <ion-input type="number" placeholder="On Interval" formControlName="on_interval"></ion-input>
@@ -31,7 +31,7 @@
             </ion-col>
           </ion-row>
           <ion-row> 
-            <ion-col size="12">
+            <ion-col class="no_padding" size="12">
               <ion-item>
                 <ion-label class="sensor_black_label" position="floating">Irrigation Off</ion-label>
                 <ion-input type="number" placeholder="Off Interval" formControlName="off_interval"></ion-input>
