--- a/Automation-App/src/app/components/ph/ph.component.html
+++ b/Automation-App/src/app/components/ph/ph.component.html
@@ -59,13 +59,13 @@
                 </ion-item>
               </ion-row>
               <ion-row *ngIf="controlForm.get('d_n_enabled').value">
-                <ion-col size="4">
+                <ion-col class="no_padding" size="4">
                   <ion-item>
                     <ion-label class="sensor_black_label" position="floating">Day Target</ion-label>
                     <ion-input formControlName="day_tgt" type="number"></ion-input>
                   </ion-item>
                 </ion-col>
-                <ion-col offset="2" size="4">
+                <ion-col class="no_padding" offset="2" size="4">
                   <ion-item>
                     <ion-label class="sensor_black_label" position="floating">Night Target</ion-label>
                     <ion-input formControlName="night_tgt" type="number"></ion-input>
@@ -73,7 +73,7 @@
                 </ion-col>
               </ion-row>
               <ion-row *ngIf="!controlForm.get('d_n_enabled').value">
-                <ion-col size="12">
+                <ion-col class="no_padding" size="12">
                   <ion-item>
                     <ion-label class="sensor_black_label" position="floating">Target</ion-label>
                     <ion-input formControlName="tgt" type="number"></ion-input>
@@ -85,13 +85,13 @@
           <div class="settings-group">
             <h3 class="h3_sensor_title">Alarm Settings</h3>
             <ion-row>
-              <ion-col size="5">
+              <ion-col class="no_padding" size="5">
                 <ion-item>
                   <ion-label class="sensor_black_label" position="floating">Min</ion-label>
                   <ion-input formControlName="alarm_min" type="number"></ion-input>
                 </ion-item>
               </ion-col>
-              <ion-col offset="1" size="5">
+              <ion-col class="no_padding" offset="1" size="5">
                 <ion-item>
                   <ion-label class="sensor_black_label" position="floating">Max</ion-label>
                   <ion-input formControlName="alarm_max" type="number"></ion-input>
