--- a/Automation-App/src/app/components/sensor-display/sensor-display.component.html
+++ b/Automation-App/src/app/components/sensor-display/sensor-display.component.html
@@ -1,15 +1,15 @@
 <ion-card class="dashboard-card">
   <ion-card-content>
-    <ion-grid>
+    <ion-grid class="no_padding">
       <ion-row>
-        <ion-col size="6">
+        <ion-col class="no_padding" size="6">
           <h3 class="header-title" lines="none">{{ sensor.display_name }}</h3>
           <ion-item lines="none">
             <h1>{{ currentVal }}&#8451;</h1>
             <ion-icon class="check-icon" name="checkmark-circle"></ion-icon>
           </ion-item>
         </ion-col>
-        <ion-col offset="1" size="5" class="details">
+        <ion-col offset="1" size="5" class="details no_padding">
             <div *ngIf="!sensor.monit_only">
               <ion-label class="title">Target Value</ion-label>
               <div>
