--- a/Automation-App/src/app/create-cluster/create-cluster.page.html
+++ b/Automation-App/src/app/create-cluster/create-cluster.page.html
@@ -10,12 +10,12 @@
 <ion-content class="gradient_background">
   <div class="content">
     <form [formGroup]="clusterForm" (ngSubmit)="onSubmit()">
-      <ion-grid>
+      <ion-grid  class="no_padding_bottom">
         <ion-row>
-          <ion-col size="7">
+          <ion-col class="no_padding_bottom" size="7">
             <h2 class="title">Cluster Settings</h2>
           </ion-col>
-          <ion-col size="5" class="button_col">
+          <ion-col size="5" class="no_padding_bottom button_col">
             <ion-button class="add_button" type="submit">Create<ion-icon name="add"></ion-icon></ion-button>
           </ion-col>
         </ion-row>
@@ -24,7 +24,7 @@
         <ion-card-content>
           <ion-grid>
             <ion-row>
-              <ion-col size="12">
+              <ion-col class="no_padding_bottom" size="12">
                 <ion-item>
                   <ion-label class="sensor_black_label" position="floating">Cluster Name</ion-label>
                   <ion-input formControlName="cluster_name"></ion-input>
