--- a/Automation-App/src/app/dashboard/cameras/cameras.page.html
+++ b/Automation-App/src/app/dashboard/cameras/cameras.page.html
@@ -12,7 +12,7 @@
   <div *ngIf="noCameras">
     <ion-grid>
       <ion-row>
-        <ion-col size="10" offset="1">
+        <ion-col class="text_center" size="10" offset="1">
           <h6>You have no Hydrotek Cameras</h6>
         </ion-col>
       </ion-row>
