Added SCSS class top_bottom_padding for ion-card-content

--- a/Automation-App/src/app/components/reservoir/reservoir.component.html
+++ b/Automation-App/src/app/components/reservoir/reservoir.component.html
@@ -1,5 +1,5 @@
 <ion-card class="dashboard-card">
-  <ion-card-content>
+  <ion-card-content class="top_bottom_padding">
     <ion-grid>
       <ion-row>
         <ion-item tappable (click)="toggleAccordion()" lines="none">
