--- a/Automation-App/src/app/components/air-temperature/air-temperature.component.html
+++ b/Automation-App/src/app/components/air-temperature/air-temperature.component.html
@@ -1,5 +1,5 @@
 <ion-card class="dashboard-card">
-  <ion-card-content>
+  <ion-card-content class="top_bottom_padding">
     <ion-grid>
       <!--Card Header-->
       <ion-row>
