done with all css unify-ing into global.scss

--- a/Automation-App/src/app/create-cluster/create-cluster.page.html
+++ b/Automation-App/src/app/create-cluster/create-cluster.page.html
@@ -13,7 +13,7 @@
       <ion-grid  class="no_padding_bottom">
         <ion-row>
           <ion-col class="no_padding_bottom" size="7">
-            <h2 class="title">Cluster Settings</h2>
+            <h2 class="h2_title title">Cluster Settings</h2>
           </ion-col>
           <ion-col size="5" class="no_padding_bottom button_col">
             <ion-button class="add_button" type="submit">Create<ion-icon name="add"></ion-icon></ion-button>
