--- a/Automation-App/src/app/add-system/add-system.page.html
+++ b/Automation-App/src/app/add-system/add-system.page.html
@@ -13,7 +13,7 @@
       <ion-grid class="no_padding_bottom">
         <ion-row>
           <ion-col  class="no_padding_bottom" size="7">
-            <h2 class="general_settings">General Settings</h2>
+            <h2 class="h2_title general_settings">General Settings</h2>
           </ion-col>
           <ion-col size="5" class="button_col no_padding_bottom">
             <ion-button class="add_button" type="submit">Create</ion-button>
@@ -47,7 +47,7 @@
           </ion-list>
         </ion-card-content>
       </ion-card>
-      <h2>Sensor List</h2>
+      <h2 class="h2_title">Sensor List</h2>
       <grow-lights *ngIf="growLights" [parentForm]="sensorsForm"></grow-lights>
       <ph *ngIf="ph" [parentForm]="sensorsForm"></ph>
       <ec *ngIf="ec" [parentForm]="sensorsForm"></ec>
