--- a/Automation-App/src/app/dashboard/monitoring/monitoring.page.html
+++ b/Automation-App/src/app/dashboard/monitoring/monitoring.page.html
@@ -10,7 +10,7 @@
       </span>
 
       <div>
-        <h2>Power Outlets</h2>
+         <h2 class="h2_title">Power Outlets</h2>
       </div>
       <ion-card>
         <ion-card-content>
