Day/Night vs normal target validators added

--- a/Automation-App/src/app/components/ec/ec.component.html
+++ b/Automation-App/src/app/components/ec/ec.component.html
@@ -99,6 +99,8 @@
                 </ion-item>
               </ion-col>
             </ion-row>
+            <p *ngIf="controlForm.errors?.targetReq">Target cannot be empty.</p>
+            <p *ngIf="controlForm.errors?.dnReq">Day/Night targets cannot be empty.</p>
           </div>
           
           <h3 class="h3_sensor_title">Alarm Settings</h3>
@@ -116,6 +118,7 @@
                 </ion-item>
               </ion-col>
             </ion-row>
+            <p *ngIf="ecForm.errors?.compareError">Alarm min must be lower than Alarm max.</p>
         </div>
       </form>
     </ion-grid>
