Implemented nonmonitoring check for at least one enabled controlo

--- a/Automation-App/src/app/components/water-temp/water-temp.component.html
+++ b/Automation-App/src/app/components/water-temp/water-temp.component.html
@@ -70,6 +70,7 @@
                 <ion-button slot="end" (click)="presentAddPowerOutletModal('Water Cooler', 'down_ctrl')">{{ isPowerOutletSetup('Water Cooler')? "Edit": "Setup"}}</ion-button>
               </ion-item>
             </ion-list>
+            <p *ngIf="waterTemperatureForm.errors?.noneEnabled">If not monitoring, at least one control must be enabled.</p>
           </div>
           <h3 class="h3_sensor_title">Alarm Settings</h3>
           <ion-row>
