--- a/Automation-App/src/app/components/ph/ph.component.html
+++ b/Automation-App/src/app/components/ph/ph.component.html
@@ -36,6 +36,7 @@
                   <ion-label class="sensor_black_label">pH Down</ion-label>
                 </ion-item>
               </ion-list>
+              <p *ngIf="phForm.errors?.noneEnabled">If not monitoring, at least one control must be enabled.</p>
             </div>
   
             <div class="settings-group">
