--- a/Automation-App/src/app/components/sensor-display/sensor-display.component.html
+++ b/Automation-App/src/app/components/sensor-display/sensor-display.component.html
@@ -5,7 +5,7 @@
         <ion-col class="no_padding" size="6">
           <h3 class="header-title" lines="none">{{ sensor.display_name }}</h3>
           <ion-item lines="none">
-            <h1>{{ currentVal }}&#8451;</h1>
+            <h1>{{ currentVal }}{{sensor.sensorUnit}}</h1>
             <ion-icon class="check-icon" name="checkmark-circle"></ion-icon>
           </ion-item>
         </ion-col>
@@ -14,13 +14,13 @@
               <ion-label class="title">Target Value</ion-label>
               <div>
                 <ion-icon name="locate-sharp"></ion-icon>
-                <ion-label class="value">{{ sensor.tgt }} &#8451;</ion-label>
+                <ion-label class="value">{{ sensor.tgt }} {{sensor.sensorUnit}}</ion-label>
               </div>
             </div>
             <ion-label class="title">Alarm Settings</ion-label>
             <div>
               <ion-icon name="alarm"></ion-icon>
-              <ion-label class="value">{{ sensor.alarm_min + ' - ' + sensor.alarm_max }} &#8451;</ion-label>
+              <ion-label class="value">{{ sensor.alarm_min + ' - ' + sensor.alarm_max }} {{sensor.sensorUnit}}</ion-label>
             </div>
         </ion-col>
       </ion-row>
