--- a/Automation-App/src/app/components/ph/ph.component.html
+++ b/Automation-App/src/app/components/ph/ph.component.html
@@ -41,16 +41,20 @@
   
             <div class="settings-group">
               <h3 class="h3_sensor_title">Dose Settings</h3>
-             <ion-list>
-               <ion-item>
-                 <ion-label class="sensor_black_label" position="floating">Dose Time</ion-label>
-                 <ion-input formControlName="dose_time" type="number"></ion-input>
-               </ion-item>
-               <ion-item>
-                 <ion-label class="sensor_black_label" position="floating">Dosing Interval</ion-label>
-                 <ion-input formControlName="dose_interv" type="number"></ion-input>
-               </ion-item>
-             </ion-list>  
+              <ion-row>
+                <ion-col class="no_padding" size="5">
+                  <ion-item>
+                    <ion-label position="floating" class="sensor_black_label">Dosing Time</ion-label>
+                    <ion-input formControlName="dose_time" type="number"></ion-input>
+                  </ion-item>
+                </ion-col>
+                <ion-col class="no_padding" offset="1" size="5">
+                  <ion-item>
+                    <ion-label position="floating" class="sensor_black_label">Dosing Interval</ion-label>
+                    <ion-input formControlName="dose_interv" type="number"></ion-input>
+                  </ion-item>
+                </ion-col>
+              </ion-row>
            </div>
 
            <div class="settings-group">
