--- a/Automation-App/src/app/components/ph/ph.component.html
+++ b/Automation-App/src/app/components/ph/ph.component.html
@@ -44,13 +44,13 @@
               <ion-row>
                 <ion-col class="no_padding" size="5">
                   <ion-item>
-                    <ion-label position="floating" class="sensor_black_label">Dosing Time</ion-label>
+                    <ion-label position="floating" class="sensor_black_label">Dosing Time (s)</ion-label>
                     <ion-input formControlName="dose_time" type="number"></ion-input>
                   </ion-item>
                 </ion-col>
                 <ion-col class="no_padding" offset="1" size="5">
                   <ion-item>
-                    <ion-label position="floating" class="sensor_black_label">Dosing Interval</ion-label>
+                    <ion-label position="floating" class="sensor_black_label">Dosing Interval (s)</ion-label>
                     <ion-input formControlName="dose_interv" type="number"></ion-input>
                   </ion-item>
                 </ion-col>
@@ -68,13 +68,13 @@
               <ion-row *ngIf="controlForm.get('d_n_enabled').value">
                 <ion-col class="no_padding" size="4">
                   <ion-item>
-                    <ion-label class="sensor_black_label" position="floating">Day Target</ion-label>
+                    <ion-label class="sensor_black_label" position="floating">Day Target ({{valueUnit}})</ion-label>
                     <ion-input formControlName="day_tgt" type="number"></ion-input>
                   </ion-item>
                 </ion-col>
                 <ion-col class="no_padding" offset="2" size="4">
                   <ion-item>
-                    <ion-label class="sensor_black_label" position="floating">Night Target</ion-label>
+                    <ion-label class="sensor_black_label" position="floating">Night Target ({{valueUnit}})</ion-label>
                     <ion-input formControlName="night_tgt" type="number"></ion-input>
                   </ion-item>
                 </ion-col>
@@ -82,7 +82,7 @@
               <ion-row *ngIf="!controlForm.get('d_n_enabled').value">
                 <ion-col class="no_padding" size="12">
                   <ion-item>
-                    <ion-label class="sensor_black_label" position="floating">Target</ion-label>
+                    <ion-label class="sensor_black_label" position="floating">Target ({{valueUnit}})</ion-label>
                     <ion-input formControlName="tgt" type="number"></ion-input>
                   </ion-item>
                 </ion-col>
@@ -96,13 +96,13 @@
             <ion-row>
               <ion-col class="no_padding" size="5">
                 <ion-item>
-                  <ion-label class="sensor_black_label" position="floating">Min</ion-label>
+                  <ion-label class="sensor_black_label" position="floating">Min ({{valueUnit}})</ion-label>
                   <ion-input formControlName="alarm_min" type="number"></ion-input>
                 </ion-item>
               </ion-col>
               <ion-col class="no_padding" offset="1" size="5">
                 <ion-item>
-                  <ion-label class="sensor_black_label" position="floating">Max</ion-label>
+                  <ion-label class="sensor_black_label" position="floating">Max ({{valueUnit}})</ion-label>
                   <ion-input formControlName="alarm_max" type="number"></ion-input>
                 </ion-item>
               </ion-col>
