EC expanded input layout

--- a/Automation-App/src/app/components/ec/ec.component.html
+++ b/Automation-App/src/app/components/ec/ec.component.html
@@ -25,20 +25,16 @@
           </div>
   
           <div *ngIf="!ecForm.get('monit_only').value" [formGroup]="controlForm"> 
-            <ion-row>
-              <ion-col class="no_padding" size="5">
+            <ion-list>
                 <ion-item>
                   <ion-label position="floating" class="sensor_black_label">Dosing Time</ion-label>
-                  <ion-input formControlName="dose_time" type="number"></ion-input>
+                  <ion-input formControlName="dose_time" type="number"><span style="display: inline; position: relative; right: 0;"> s</span></ion-input>
                 </ion-item>
-              </ion-col>
-              <ion-col class="no_padding" offset="1" size="5">
                 <ion-item>
                   <ion-label position="floating" class="sensor_black_label">Dosing Interval</ion-label>
                   <ion-input formControlName="dose_interv" type="number"></ion-input>
                 </ion-item>
-              </ion-col>
-            </ion-row>
+            </ion-list>
             
             <h3 class="h3_sensor_title">Pumps</h3>
             <div formGroupName="pumps">
