--- a/Automation-App/src/app/components/ph/ph.component.html
+++ b/Automation-App/src/app/components/ph/ph.component.html
@@ -44,14 +44,14 @@
               <ion-row>
                 <ion-col class="no_padding" size="5">
                   <ion-item>
-                    <ion-label position="floating" class="sensor_black_label">Dosing Time (s)</ion-label>
-                    <ion-input formControlName="dose_time" type="number"></ion-input>
+                    <ion-label position="floating" class="sensor_black_label">Dosing Time</ion-label>
+                    <ion-input formControlName="dose_time" type="number" class="time_unit"></ion-input>
                   </ion-item>
                 </ion-col>
                 <ion-col class="no_padding" offset="1" size="5">
                   <ion-item>
-                    <ion-label position="floating" class="sensor_black_label">Dosing Interval (s)</ion-label>
-                    <ion-input formControlName="dose_interv" type="number"></ion-input>
+                    <ion-label position="floating" class="sensor_black_label">Dosing Interval</ion-label>
+                    <ion-input formControlName="dose_interv" type="number" class="time_unit"></ion-input>
                   </ion-item>
                 </ion-col>
               </ion-row>
