--- a/Automation-App/src/app/components/ec/ec.component.html
+++ b/Automation-App/src/app/components/ec/ec.component.html
@@ -7,6 +7,8 @@
           <ion-icon slot="start" name="chevron-forward-outline" *ngIf="!isOpen"></ion-icon>
           <ion-icon slot="start" name="chevron-down-outline" *ngIf="isOpen"></ion-icon>
           <h3 fill="clear" class="color h3_sensor_title">EC</h3>
+          <ion-icon slot="end" name="alert-circle-outline" color="danger" *ngIf="!ecForm.valid"></ion-icon>
+
         </ion-item>
       </ion-row>
       
@@ -28,7 +30,7 @@
             <ion-list>
                 <ion-item>
                   <ion-label position="floating" class="sensor_black_label">Dosing Time</ion-label>
-                  <ion-input formControlName="dose_time" type="number"><span style="display: inline; position: relative; right: 0;"> s</span></ion-input>
+                  <ion-input formControlName="dose_time" type="number"></ion-input>
                 </ion-item>
                 <ion-item>
                   <ion-label position="floating" class="sensor_black_label">Dosing Interval</ion-label>
