--- a/Automation-App/src/app/components/grow-lights/grow-lights.component.html
+++ b/Automation-App/src/app/components/grow-lights/grow-lights.component.html
@@ -7,6 +7,7 @@
           <ion-icon slot="start" name="chevron-forward-outline" *ngIf="!isOpen"></ion-icon>
           <ion-icon slot="start" name="chevron-down-outline" *ngIf="isOpen"></ion-icon>
           <h3 fill="clear" class="color h3_sensor_title">Grow Lights</h3>
+          <ion-icon slot="end" name="alert-circle-outline" color="danger" *ngIf="!growLightsForm.valid"></ion-icon>
         </ion-item>
       </ion-row>
 
