--- a/Automation-App/src/app/components/reservoir/reservoir.component.html
+++ b/Automation-App/src/app/components/reservoir/reservoir.component.html
@@ -6,6 +6,7 @@
           <ion-icon slot="start" name="chevron-forward-outline" *ngIf="!isOpen"></ion-icon>
           <ion-icon slot="start" name="chevron-down-outline" *ngIf="isOpen"></ion-icon>
           <h3 fill="clear" class="color h3_sensor_title">Reservoir</h3>
+          <ion-icon slot="end" name="alert-circle-outline" color="danger" *ngIf="!reservoirForm.valid"></ion-icon>
         </ion-item>
       </ion-row>
       <form [formGroup]="reservoirForm">
