--- a/Automation-App/src/app/components/water-temp/water-temp.component.html
+++ b/Automation-App/src/app/components/water-temp/water-temp.component.html
@@ -7,6 +7,8 @@
           <ion-icon slot="start" name="chevron-forward-outline" *ngIf="!isOpen"></ion-icon>
           <ion-icon slot="start" name="chevron-down-outline" *ngIf="isOpen"></ion-icon>
           <h3 fill="clear" class="color h3_sensor_title">Water Temperature</h3>
+          <ion-icon slot="end" name="alert-circle-outline" color="danger" *ngIf="!waterTemperatureForm.valid"></ion-icon>
+
         </ion-item>
       </ion-row>
 
