Grayed and added all units for inputs

--- a/Automation-App/src/app/components/irrigation/irrigation.component.html
+++ b/Automation-App/src/app/components/irrigation/irrigation.component.html
@@ -27,7 +27,7 @@
             <ion-col class="no_padding" size="12">
               <ion-item>
                 <ion-label class="sensor_black_label" position="floating">Irrigation On</ion-label>
-                <ion-input type="number" placeholder="On Interval" formControlName="on_interval"></ion-input>
+                <ion-input type="number" placeholder="On Interval" formControlName="on_interval" class="minute_unit"></ion-input>
               </ion-item>
             </ion-col>
           </ion-row>
@@ -35,7 +35,7 @@
             <ion-col class="no_padding" size="12">
               <ion-item>
                 <ion-label class="sensor_black_label" position="floating">Irrigation Off</ion-label>
-                <ion-input type="number" placeholder="Off Interval" formControlName="off_interval"></ion-input>
+                <ion-input type="number" placeholder="Off Interval" formControlName="off_interval" class="minute_unit"></ion-input>
               </ion-item>
             </ion-col>
           </ion-row>         
