--- a/Automation-App/src/app/components/ph/ph.component.scss
+++ b/Automation-App/src/app/components/ph/ph.component.scss
@@ -7,5 +7,11 @@
 }
 
 .time_unit::after{
-    content: " s";
+    content: "sec";
+    color: gray;
+}
+
+.ph_unit::after{
+    content: "PH";
+    color: gray;
 }
