--- a/Automation-App/src/app/components/reservoir/reservoir.component.html
+++ b/Automation-App/src/app/components/reservoir/reservoir.component.html
@@ -22,7 +22,7 @@
           <ion-col class="no_padding" size="12">
             <ion-item>
               <ion-label class="sensor_black_label" position="floating">Reservoir Size</ion-label>
-              <ion-input formControlName="reservoir_size" type="number"></ion-input>
+              <ion-input formControlName="reservoir_size" type="number" class="gallon_unit"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
@@ -30,7 +30,7 @@
           <ion-col class="no_padding" size="12">
             <ion-item>
               <ion-label class="sensor_black_label" position="floating">Replacement Interval</ion-label>
-              <ion-input formControlName="water_replacement_interval" type="number"></ion-input>
+              <ion-input formControlName="water_replacement_interval" type="number" class="day_unit"></ion-input>
             </ion-item>
           </ion-col>
         </ion-row>
