--- a/Automation-App/src/app/components/ec/ec.component.html
+++ b/Automation-App/src/app/components/ec/ec.component.html
@@ -30,11 +30,11 @@
             <ion-list>
                 <ion-item>
                   <ion-label position="floating" class="sensor_black_label">Dosing Time</ion-label>
-                  <ion-input formControlName="dose_time" type="number"></ion-input>
+                  <ion-input formControlName="dose_time" type="number" class="time_unit"></ion-input>
                 </ion-item>
                 <ion-item>
                   <ion-label position="floating" class="sensor_black_label">Dosing Interval</ion-label>
-                  <ion-input formControlName="dose_interv" type="number"></ion-input>
+                  <ion-input formControlName="dose_interv" type="number" class="time_unit"></ion-input>
                 </ion-item>
             </ion-list>
             
@@ -80,13 +80,13 @@
               <ion-col class="no_padding" size="6">
                 <ion-item>
                   <ion-label position="floating" class="sensor_black_label">Day Target Value</ion-label>
-                  <ion-input formControlName="day_tgt" type="number"></ion-input>
+                  <ion-input formControlName="day_tgt" type="number" class="ec_unit"></ion-input>
                 </ion-item>
               </ion-col>
               <ion-col class="no_padding" size="6">
                 <ion-item>
                   <ion-label position="floating" class="sensor_black_label">Night Target Value</ion-label>
-                  <ion-input formControlName="night_tgt" type="number"></ion-input>
+                  <ion-input formControlName="night_tgt" type="number" class="ec_unit"></ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
@@ -94,7 +94,7 @@
               <ion-col class="no_padding" size="12">
                 <ion-item>
                   <ion-label position="floating" class="sensor_black_label">Target Value</ion-label>
-                  <ion-input formControlName="tgt" type="number"></ion-input>
+                  <ion-input formControlName="tgt" type="number" class="ec_unit"></ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
@@ -107,13 +107,13 @@
               <ion-col class="no_padding" size="5">
                 <ion-item>
                   <ion-label position="floating" class="sensor_black_label">Min</ion-label>
-                  <ion-input formControlName="alarm_min" type="number"></ion-input>
+                  <ion-input formControlName="alarm_min" type="number" class="ec_unit"></ion-input>
                 </ion-item>
               </ion-col>
               <ion-col class="no_padding" offset="1" size="5">
                 <ion-item>
                   <ion-label position="floating" class="sensor_black_label">Max</ion-label>
-                  <ion-input formControlName="alarm_max" type="number"></ion-input>
+                  <ion-input formControlName="alarm_max" type="number" class="ec_unit"></ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
