--- a/Automation-App/src/app/components/water-temp/water-temp.component.html
+++ b/Automation-App/src/app/components/water-temp/water-temp.component.html
@@ -37,13 +37,13 @@
               <ion-col class="no_padding" size="6">
                 <ion-item>
                   <ion-label class="sensor_black_label" position="floating">Day Target Value</ion-label>
-                  <ion-input formControlName="day_tgt" type="number"></ion-input>
+                  <ion-input formControlName="day_tgt" type="number" class="temp_unit"></ion-input>
                 </ion-item>
               </ion-col>
               <ion-col class="no_padding" size="6">
                 <ion-item>
                   <ion-label class="sensor_black_label" position="floating">Night Target Value</ion-label>
-                  <ion-input formControlName="night_tgt" type="number"></ion-input>
+                  <ion-input formControlName="night_tgt" type="number" class="temp_unit"></ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
@@ -51,7 +51,7 @@
               <ion-col class="no_padding" size="12">
                 <ion-item>
                   <ion-label class="sensor_black_label" position="floating">Target Value</ion-label>
-                  <ion-input formControlName="tgt" type="number"></ion-input>
+                  <ion-input formControlName="tgt" type="number" class="temp_unit"></ion-input>
                 </ion-item>
               </ion-col>
             </ion-row>
@@ -79,13 +79,13 @@
             <ion-col class="no_padding" size="5">
               <ion-item>
                 <ion-label class="sensor_black_label" position="floating">Min</ion-label>
-                <ion-input formControlName="alarm_min" type="number"></ion-input>
+                <ion-input formControlName="alarm_min" type="number" class="temp_unit"></ion-input>
               </ion-item>
             </ion-col>
             <ion-col class="no_padding" offset="1" size="5">
               <ion-item>
                 <ion-label class="sensor_black_label" position="floating">Max</ion-label>
-                <ion-input formControlName="alarm_max" type="number"></ion-input>
+                <ion-input formControlName="alarm_max" type="number" class="temp_unit"></ion-input>
               </ion-item>
             </ion-col>
           </ion-row>
