--- a/Automation-App/src/app/components/ec/ec.component.html
+++ b/Automation-App/src/app/components/ec/ec.component.html
@@ -76,20 +76,16 @@
                 <ion-label class="sensor_black_label">Different Targets for Day and Night</ion-label>
               </ion-item>
             </ion-row>
-            <ion-row *ngIf="controlForm.get('d_n_enabled').value">
-              <ion-col class="no_padding" size="6">
+            <ion-list *ngIf="controlForm.get('d_n_enabled').value">
                 <ion-item>
                   <ion-label position="floating" class="sensor_black_label">Day Target Value</ion-label>
                   <ion-input formControlName="day_tgt" type="number" class="ec_unit"></ion-input>
                 </ion-item>
-              </ion-col>
-              <ion-col class="no_padding" size="6">
                 <ion-item>
                   <ion-label position="floating" class="sensor_black_label">Night Target Value</ion-label>
                   <ion-input formControlName="night_tgt" type="number" class="ec_unit"></ion-input>
                 </ion-item>
-              </ion-col>
-            </ion-row>
+            </ion-list>
             <ion-row *ngIf="!controlForm.get('d_n_enabled').value">
               <ion-col class="no_padding" size="12">
                 <ion-item>
@@ -103,20 +99,16 @@
           </div>
           
           <h3 class="h3_sensor_title">Alarm Settings</h3>
-            <ion-row>
-              <ion-col class="no_padding" size="5">
+            <ion-list>
                 <ion-item>
                   <ion-label position="floating" class="sensor_black_label">Min</ion-label>
                   <ion-input formControlName="alarm_min" type="number" class="ec_unit"></ion-input>
                 </ion-item>
-              </ion-col>
-              <ion-col class="no_padding" offset="1" size="5">
                 <ion-item>
                   <ion-label position="floating" class="sensor_black_label">Max</ion-label>
                   <ion-input formControlName="alarm_max" type="number" class="ec_unit"></ion-input>
                 </ion-item>
-              </ion-col>
-            </ion-row>
+            </ion-list>
             <p *ngIf="ecForm.errors?.compareError">Alarm min must be lower than Alarm max.</p>
         </div>
       </form>
