--- a/Automation-App/src/app/components/water-temp/water-temp.component.html
+++ b/Automation-App/src/app/components/water-temp/water-temp.component.html
@@ -33,20 +33,16 @@
                 <ion-label class="sensor_black_label">Different Targets for Day and Night</ion-label>
               </ion-item>
             </ion-row>
-            <ion-row *ngIf="controlForm.get('d_n_enabled').value">
-              <ion-col class="no_padding" size="6">
+            <ion-list *ngIf="controlForm.get('d_n_enabled').value">
                 <ion-item>
                   <ion-label class="sensor_black_label" position="floating">Day Target Value</ion-label>
                   <ion-input formControlName="day_tgt" type="number" class="temp_unit"></ion-input>
                 </ion-item>
-              </ion-col>
-              <ion-col class="no_padding" size="6">
                 <ion-item>
                   <ion-label class="sensor_black_label" position="floating">Night Target Value</ion-label>
                   <ion-input formControlName="night_tgt" type="number" class="temp_unit"></ion-input>
                 </ion-item>
-              </ion-col>
-            </ion-row>
+            </ion-list>
             <ion-row *ngIf="!controlForm.get('d_n_enabled').value">
               <ion-col class="no_padding" size="12">
                 <ion-item>
@@ -75,20 +71,16 @@
             <p *ngIf="waterTemperatureForm.errors?.noneEnabled">If not monitoring, at least one control must be enabled.</p>
           </div>
           <h3 class="h3_sensor_title">Alarm Settings</h3>
-          <ion-row>
-            <ion-col class="no_padding" size="5">
+          <ion-list>
               <ion-item>
                 <ion-label class="sensor_black_label" position="floating">Min</ion-label>
                 <ion-input formControlName="alarm_min" type="number" class="temp_unit"></ion-input>
               </ion-item>
-            </ion-col>
-            <ion-col class="no_padding" offset="1" size="5">
               <ion-item>
                 <ion-label class="sensor_black_label" position="floating">Max</ion-label>
                 <ion-input formControlName="alarm_max" type="number" class="temp_unit"></ion-input>
               </ion-item>
-            </ion-col>
-          </ion-row>
+          </ion-list>
           <p *ngIf="waterTemperatureForm.errors?.compareError">Alarm min must be lower than Alarm max.</p>
         </div>
       </form>
