Added scss class for warning text

--- a/Automation-App/src/global.scss
+++ b/Automation-App/src/global.scss
@@ -94,3 +94,8 @@
     margin-left: 10px;
     display: inline;
 } //cameras is different
+
+.error_msg{
+    color: red;
+    margin-left: 10px !important;
+}
