--- a/Automation-App/src/app/components/ph/ph.component.html
+++ b/Automation-App/src/app/components/ph/ph.component.html
@@ -46,10 +46,17 @@
                   <ion-label position="floating" class="sensor_black_label">Dosing Time</ion-label>
                   <ion-input formControlName="dose_time" type="number" class="time_unit"></ion-input>
                 </ion-item>
+                <p *ngIf="controlForm.get('dose_time').errors?.required" class="error_msg">This is a required value.</p>
+                <p *ngIf="controlForm.get('dose_time').errors?.min" class="error_msg">This value must be at least {{controlForm.get('dose_time').errors.min.min}}.</p>
+                <p *ngIf="controlForm.get('dose_time').errors?.max" class="error_msg">This value must be at most {{controlForm.get('dose_time').errors.max.max}}.</p>
+
                 <ion-item>
                   <ion-label position="floating" class="sensor_black_label">Dosing Interval</ion-label>
                   <ion-input formControlName="dose_interv" type="number" class="time_unit"></ion-input>
                 </ion-item>
+                <p *ngIf="controlForm.get('dose_interv').errors?.required" class="error_msg">This is a required value.</p>
+                <p *ngIf="controlForm.get('dose_interv').errors?.min" class="error_msg">This value must be at least {{controlForm.get('dose_interv').errors.min.min}}.</p>
+                <p *ngIf="controlForm.get('dose_interv').errors?.max" class="error_msg">This value must be at most {{controlForm.get('dose_interv').errors.max.max}}.</p>
             </ion-list>
            </div>
 
@@ -66,10 +73,18 @@
                     <ion-label class="sensor_black_label" position="floating">Day Target</ion-label>
                     <ion-input formControlName="day_tgt" type="number" class="ph_unit"></ion-input>
                   </ion-item>
+                  <p *ngIf="controlForm.get('day_tgt').errors?.incorrect" class="error_msg">This is a required value.</p>
+                  <p *ngIf="controlForm.get('day_tgt').errors?.min" class="error_msg">This value must be at least {{controlForm.get('day_tgt').errors.min.min}}.</p>
+                  <p *ngIf="controlForm.get('day_tgt').errors?.max" class="error_msg">This value must be at most {{controlForm.get('day_tgt').errors.max.max}}.</p>
+
                   <ion-item>
                     <ion-label class="sensor_black_label" position="floating">Night Target</ion-label>
                     <ion-input formControlName="night_tgt" type="number" class="ph_unit"></ion-input>
                   </ion-item>
+                  <p *ngIf="controlForm.get('night_tgt').errors?.incorrect" class="error_msg">This is a required value.</p>
+                  <p *ngIf="controlForm.get('night_tgt').errors?.min" class="error_msg">This value must be at least {{controlForm.get('night_tgt').errors.min.min}}.</p>
+                  <p *ngIf="controlForm.get('night_tgt').errors?.max" class="error_msg">This value must be at most {{controlForm.get('night_tgt').errors.max.max}}.</p>
+
               </ion-list>
               <ion-row *ngIf="!controlForm.get('d_n_enabled').value">
                 <ion-col class="no_padding" size="12">
@@ -77,10 +92,12 @@
                     <ion-label class="sensor_black_label" position="floating">Target</ion-label>
                     <ion-input formControlName="tgt" type="number" class="ph_unit"></ion-input>
                   </ion-item>
+                  <p *ngIf="controlForm.get('tgt').errors?.incorrect" class="error_msg">This is a required value.</p>
+                  <p *ngIf="controlForm.get('tgt').errors?.min" class="error_msg">This value must be at least {{controlForm.get('tgt').errors.min.min}}.</p>
+                  <p *ngIf="controlForm.get('tgt').errors?.max" class="error_msg">This value must be at most {{controlForm.get('tgt').errors.max.max}}.</p>
+
                 </ion-col>
               </ion-row>
-              <p *ngIf="controlForm.errors?.targetReq">Target cannot be empty.</p>
-              <p *ngIf="controlForm.errors?.dnReq">Day/Night targets cannot be empty.</p>
             </div>
           </div>
           <div class="settings-group">
@@ -90,12 +107,20 @@
                   <ion-label class="sensor_black_label" position="floating">Min</ion-label>
                   <ion-input formControlName="alarm_min" type="number" class="ph_unit"></ion-input>
                 </ion-item>
+                <p *ngIf="phForm.get('alarm_min').errors?.required" class="error_msg">This is a required value.</p>
+                <p *ngIf="phForm.get('alarm_min').errors?.min" class="error_msg">This value must be at least {{phForm.get('alarm_min').errors.min.min}}.</p>
+                <p *ngIf="phForm.get('alarm_min').errors?.max" class="error_msg">This value must be at most {{phForm.get('alarm_min').errors.max.max}}.</p>
+
                 <ion-item>
                   <ion-label class="sensor_black_label" position="floating">Max</ion-label>
                   <ion-input formControlName="alarm_max" type="number" class="ph_unit"></ion-input>
                 </ion-item>
+                <p *ngIf="phForm.get('alarm_max').errors?.required" class="error_msg">This is a required value.</p>
+                <p *ngIf="phForm.get('alarm_max').errors?.min" class="error_msg">This value must be at least {{phForm.get('alarm_max').errors.min.min}}.</p>
+                <p *ngIf="phForm.get('alarm_max').errors?.max" class="error_msg">This value must be at most {{phForm.get('alarm_max').errors.max.max}}.</p>
+
             </ion-list>
-            <p *ngIf="phForm.errors?.compareError">Alarm min must be lower than Alarm max.</p>
+            <p *ngIf="phForm.errors?.compareError" class="error_msg">Alarm min must be lower than Alarm max.</p>
           </div>
         </div>
       </form>
